# dynamic_survey_system

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml
.envs/.local/: .django  .flower  .postgres
.envs/.production/: .celery  .django  .flower  .postgres  .redis
apps/communications/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/communications/migrations/: 0001_initial.py
apps/core/: admin_mixins.py  apps.py  monkeypatches.py  schema.py  throttling.py
apps/reports/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/reports/migrations/: 0001_initial.py
apps/submissions/: admin.py  models.py  permissions.py  resources.py  serializers.py  services.py  urls.py  views.py
apps/submissions/migrations/: 0001_initial.py  0002_rename_response_answer_submission_and_more.py  0003_submission_invitation.py
apps/surveys/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  translation.py  urls.py  views.py
apps/surveys/migrations/: 0001_initial.py  0002_remove_question_configuration_and_more.py  0002_survey_language.py
apps/users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_analyst_user_role.py
compose/: local.yml  production.yml  swarm.yml
compose/local/django/: Dockerfile  entrypoint  start  start-celerybeat  start-celeryworker  start-flower
config/: celery.py  settings.py  urls.py
config/settings/: base.py  local.py  production.py
requirements/: base.txt  local.txt  prod.txt
(+14 files in other folders)
