[project]
requires-python = ">=3.10"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    "**/migrations/*.py",
    ".envs",
    ".env",
    "env",
    "venv",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
